--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,12 +19,16 @@ dependencies = [
     # "protobuf<4.0.0",
     # "scikit-learn>=1.8.0",
     # "xgboost>=3.1.3",
+    "llvmlite==0.43.0",
     "matplotlib>=3.10.8",
     "mlflow>=3.9.0",
     "notebook>=7.5.3",
     # "numpy>=1.26.4",
+    "numpy<2.0",
     "pandas>=2.3.3",
     # "polars>=1.38.1",
     # "polars-lts-cpu>=1.33.1",
+    "plotly>=6.5.2",
     "seaborn>=0.13.2",
+    "shap==0.48.0",
 ]
